[project]
name = "zitadel-python"
version = "0.1.0"
description = "zitadel python sdk"
authors = [
    {name = "fatelei", email = "fatelei@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
